syntax = "proto3";

option go_package = "./;pb";
package pb;

message MathRequest {
  int64 operand_a = 1;
  int64 operand_b = 2;
}

message MathResponse {
  int64 result = 1;
  string error_message = 2;
}

service MathService {
  rpc Add(MathRequest) returns (MathResponse);
  rpc Subtract(MathRequest) returns (MathResponse);
  rpc Multiply(MathRequest) returns (MathResponse);
  rpc Divide(MathRequest) returns (MathResponse);
  rpc Power(MathRequest) returns (MathResponse);
  rpc SquareRoot(MathRequest) returns (MathResponse);
  rpc Factorial(MathRequest) returns (MathResponse);
  rpc Logarithm(MathRequest) returns (MathResponse);
  rpc Sin(MathRequest) returns (MathResponse);
  rpc Cos(MathRequest) returns (MathResponse);
  rpc Tan(MathRequest) returns (MathResponse);
  rpc RandomNumber(MathRequest) returns (MathResponse);
  rpc Gcd(MathRequest) returns (MathResponse);
  rpc Lcm(MathRequest) returns (MathResponse);
}